# qdra

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.prod-local.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  pyproject.toml
backend/docker/: api-entrypoint.sh
backend/docker/postgres-init/: create-test-db.sql
backend/qdra/: __init__.py  main.py  worker.py
backend/qdra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/qdra/alembic/: env.py
backend/qdra/api/: auth.py  entities.py  images.py  materials.py  output_solver.py  planning_runs.py  project_templates.py  projects.py  recipes.py  schema.py  users.py
backend/qdra/db/: base.py  session.py
backend/qdra/domain/: __init__.py  constraints.py  evaluation.py  state.py
backend/qdra/models/: __init__.py  entity.py  entity_parameter.py  image_asset.py  material.py  option.py  parameter.py  parameter_constraint.py  project.py  project_template.py  project_user_permissions.py  recipe.py  recipe_parameter.py  slot.py  user.py  user_app_permissions.py
backend/qdra/repositories/: entity_parameter_repository.py  entity_repository.py  image_asset_repository.py  material_repository.py  option_repository.py  parameter_constraint_repository.py  parameter_repository.py  project_repository.py  project_template_repository.py  project_user_permissions_repository.py  recipe_parameter_repository.py  recipe_repository.py  slot_repository.py  user_app_permissions_repository.py  user_repository.py
backend/scripts/: run_migrations.py
(+214 files in other folders)
